<resources>
    <string name="app_name">Heylo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_login">Heylo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_password">forget password</string>
    <string name="no_account">No account</string>
    <string name="title_activity_code_confirmation">CodeConfirmation</string>
    <string name="code_confirmation">Enter the 5-digit code received by sms</string>
    <string name="title_activity_register">Resgister</string>
    <string name="send">Send</string>
    <string name="action_settings">Reglages</string>
    <string name="phone">Phone</string>
    <string name="succes_code">Code check successfully. Your password will be sent by sms. Thank you</string>
    <string name="wrong_code">Wrong code</string>
    <string name="send_code_agent">Send the code again</string>
    <string name="your">Your</string>
    <string name="your_tel">Your phone number :</string>
    <string name="TimeCount">Time count</string>
    <string name="title_activity_home">Home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_test">Test</string>
    <string name="welcome">Welcome</string>
</resources>
