<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".connexion.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:src="@mipmap/logohello"
                android:layout_gravity="center"
                />
            <AutoCompleteTextView
                android:id="@+id/email"
                android:hint="@string/phone"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rect_stroke_grey"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginTop="50dp"
                android:text=""
                android:textColorHint="@color/light_grey"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_stroke_grey"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:text=""
                android:textColorHint="@color/light_grey"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forget_password"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                />
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner_accent"

                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/go_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/no_account"
                android:gravity="center"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>